applications/namespaces/default/grafana/grafana.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
    labels:
        app: grafana
    name: grafana
    namespace: default
spec:
    serviceName: grafana
    replicas: 1
    revisionHistoryLimit: 3
    podManagementPolicy: Parallel
    selector:
        matchLabels:
            app: grafana
    template:
        metadata:
            labels:
                app: grafana
                app.kubernetes.io/name: grafana
        spec:
            automountServiceAccountToken: true
            containers:
                - env:
                      - name: GF_PATHS_CONFIG
                        value: /var/lib/grafana/grafana.ini
                  image: grafana/grafana:12.0.1@sha256:06dc8d60e184705e5dc00e051a6d92342a44010d7d5e538d0a36339e85abb9b7
                  imagePullPolicy: IfNotPresent
                  name: grafana
                  ports:
                      - containerPort: 3000
                        name: http
                        protocol: TCP
                  resources:
                      limits:
                          memory: 1G
                      requests:
                          cpu: 300m
                          memory: 256Mi
                  securityContext:
                      allowPrivilegeEscalation: false
                      privileged: false
                      readOnlyRootFilesystem: false
                      runAsGroup: 997
                      runAsNonRoot: true
                      runAsUser: 998
                      capabilities:
                        drop:
                          - "ALL"
                  terminationMessagePath: /dev/termination-log
                  terminationMessagePolicy: File
                  volumeMounts:
                      - mountPath: /var/lib/grafana
                        mountPropagation: None
                        name: config
            dnsPolicy: ClusterFirst
            enableServiceLinks: true
            restartPolicy: Always
            schedulerName: default-scheduler
            securityContext:
                seccompProfile:
                  type: RuntimeDefault
            shareProcessNamespace: false
            terminationGracePeriodSeconds: 30
            volumes:
                - name: config
                  persistentVolumeClaim:
                    claimName: grafana-config-zfs
---
apiVersion: v1
kind: Service
metadata:
    labels:
        app: grafana
    name: grafana
    namespace: default
spec:
    internalTrafficPolicy: Cluster
    ipFamilies:
        - IPv4
    ipFamilyPolicy: SingleStack
    ports:
        - name: http
          port: 3000
          protocol: TCP
          targetPort: http
    selector:
        app: grafana
    sessionAffinity: None
    type: ClusterIP
