applications/namespaces/default/grafana/netpol.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: grafana
  namespace: default
spec:
  endpointSelector:
    matchLabels:
      app: grafana
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: ingress-nginx
            io.kubernetes.pod.namespace: default
      toPorts:
        - ports:
            - port: "3000"
  egress:
    - toEntities:
        - cluster
    - toFQDNs:
        - matchName: discordapp.com
        - matchName: "github.com"
        - matchPattern: "*.github.com"
      toPorts:
        - ports:
            - port: "443"
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
